<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/cardiac_logo"
        tools:layout_editor_absoluteX="16dp"
        android:elevation="0dp"
        tools:layout_editor_absoluteY="-30dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:elevation="1dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recycleview">

        <TextView
            android:id="@+id/record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="All Records"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="200dp"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/patientsdata_row"
        tools:itemCount="6"
        android:elevation="1dp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        app:layout_constraintBottom_toTopOf="@id/add_button" />

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/add_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:clickable="true"-->
<!--        android:contentDescription="@string/app_name"-->
<!--        android:focusable="true"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:rippleColor="#792BA3"-->
<!--        android:backgroundTint="#7E6388"-->
<!--        app:layout_constraintMarginEnd="16dp"-->
<!--        app:layout_constraintMarginBottom="16dp"-->
<!--        android:foreground="@drawable/baseline_add_24" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#792BA3"
        android:backgroundTint="#7E6388"
        tools:ignore="MissingConstraints"
        android:foreground="@drawable/baseline_add_24"/>


</androidx.constraintlayout.widget.ConstraintLayout>