<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".AddActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/cardiac_logo"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-30dp" />

    <TextView
        android:id="@+id/header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="50dp"
        android:text="Edit Measurement:"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Date of Measurement:"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/header2" />

    <EditText
        android:id="@+id/dateValue2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#504343"
        android:layout_marginTop="5dp"
        android:background="#504343"
        android:hint="dd-mm-yy"
        android:textColorHint="#9F8383"
        android:inputType="text"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/date2" />

    <TextView
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Time of Measurement:"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/date2" />

    <EditText
        android:id="@+id/timeValue2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="#504343"
        android:backgroundTint="#504343"
        android:hint="hh : mm"
        android:textColorHint="#9F8383"
        android:inputType="text"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/time2" />

    <TextView
        android:id="@+id/systolic2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Systolic Pressure:"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/time2" />

    <EditText
        android:id="@+id/systolicValue2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="#504343"
        android:backgroundTint="#504343"
        android:hint="number"
        android:textColorHint="#9F8383"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/systolic2" />

    <TextView
        android:id="@+id/diastolic2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Diastolic Pressure:"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/systolic2" />

    <EditText
        android:id="@+id/diastolicValue2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="#504343"
        android:backgroundTint="#504343"
        android:hint="number"
        android:textColorHint="#9F8383"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/diastolic2" />

    <TextView
        android:id="@+id/heartRate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Heart Rate:"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/diastolic2" />

    <EditText
        android:id="@+id/heartRateValue2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#504343"
        android:background="#504343"
        android:hint="number"
        android:textColorHint="#9F8383"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/heartRate2" />

    <TextView
        android:id="@+id/comment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Comment:"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/heartRate2" />

    <EditText
        android:id="@+id/commentValue2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="5dp"
        android:background="#504343"
        android:backgroundTint="#504343"
        android:hint="Comment"
        android:textColorHint="#9F8383"
        android:inputType="textMultiLine"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/header2"
        app:layout_constraintTop_toBottomOf="@+id/comment2" />

    <FrameLayout
        android:id="@+id/updateFrameLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/DeepSkyBlue"
        android:layout_marginBottom="27dp"
        tools:ignore="MissingConstraints">

    </FrameLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:padding="10dp"
        android:text="Update"
        android:textColor="@color/DeepSkyBlue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentValue2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="207dp" />
</androidx.constraintlayout.widget.ConstraintLayout>