...
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/detail_Header"
        app:layout_constraintTop_toBottomOf="@+id/detail_Header" />

    <TextView
        android:id="@+id/DateValue_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:text="dd/mm/yy"
        android:textColor="#808080"
...
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#672A2A"
        android:layout_marginBottom="27dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/editButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:background="@drawable/button_border"
            android:textColor="@color/DeepSkyBlue"
            android:text="Edit"
...
